# pyzy

./: .gitignore  Makefile.am  configure.ac  pyzy-1.0.pc.in  pyzy.spec.in
data/: .gitignore  Makefile.am
data/db/: Makefile.am
data/db/android/: Makefile.am  create_db.py
data/db/open-phrase/: Makefile.am
docs/: .gitignore  Doxyfile.in  Makefile.am  mainpage.txt
m4/: Makefile.am
scripts/: addheader.py  bopomofo.py  double.py  genbopomofokeyboard.py  genpuncttable.py  genpytable.py  gensimptradtable.py  header  pydict.py  pyutil.py  update-simptrad-table.py
src/: Bopomofo.h  BopomofoContext.cc  BopomofoContext.h  BopomofoKeyboard.h  Config.h  Const.h  Database.cc  Database.h  DoublePinyinContext.cc  DoublePinyinContext.h  DoublePinyinTable.h  DynamicSpecialPhrase.cc  DynamicSpecialPhrase.h  FullPinyinContext.cc  FullPinyinContext.h  InputContext.cc  InputContext.h  Makefile.am  PhoneticContext.cc  PhoneticContext.h  Phrase.h  PhraseArray.h  PhraseEditor.cc  PhraseEditor.h  PinyinArray.h  PinyinContext.cc  PinyinContext.h  PinyinParser.cc  PinyinParser.h  PinyinParserTable.h  PyZyBopomofoContext.cc  PyZyBopomofoContext.h  PyZyBopomofoKeyboard.h  PyZyCandidates.cc  PyZyCandidates.h  PyZyConfig.cc  PyZyConfig.h  PyZyConst.h  PyZyDatabase.cc  PyZyDatabase.h  (+43 more)
src/tests/: Makefile.am  basic.cc
tools/: googlecode_upload.py
